# Email-Agent-Prompt-Injection-and-GRPO-Defense

./: .gitignore  LICENSE  Makefile  README.md  diagnose_eos.py  eval_combined.py  eval_combined_loose.py  eval_grpo_attack.py  final_report.md  pyproject.toml  scripts_plot_grpo_curves.py  test_grpo.py
data/: attack_seeds.jsonl  dpo_pairs.jsonl  grpo_prompts.jsonl  inbox.json
scripts/: audit_report_numbers.py
src/: __init__.py  agent.py  classifier.py  combined_guard.py  dpo_data.py  dpo_train.py  eval.py  grpo_data.py  grpo_train.py  grpo_verifier.py  plots.py  redteam.py  sft_warmup.py
